signup-app/yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress                       
metadata:
  name: ingress-ajp   
  namespace: ajp-namespaces
spec:       
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:                  
          service:
            name: hello-nginx
            port: 
              number: 80
      - pathType: Prefix
        path: "/signup"
        backend:                  
          service:
            name: hello-nginx
            port: 
              number: 80
      - pathType: Prefix
        path: "/youtube"
        backend: 
          service:
            name: youtube-nginx
            port: 
              number: 80
